--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-new change boi
+ changed it
 <head>
     <title>PlayTime</title>
     <h2 id="playTime">PlayTime</h2>
